# benford-midi-analysis

./: .editorconfig  .gitattributes  .gitignore  INSTALL.md  SETUP_SUMMARY.md  analysis.py  ci_test.py  pyproject.toml  requirements.txt  run_tests.py  setup.py  test_github_actions.sh  test_package.py  utils.py
.github/workflows/: ci.yml  publish.yml
examples/: basic_usage.py  comparison_example.py
src/benford_midi/: __init__.py  analysis.py  cli.py  tests.py  utils.py
src/benford_midi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_analysis.py  test_tests.py  tests.py
