[tool.poetry]
name = "benford-midi"
version = "0.1.0"
description = "A package for analyzing MIDI files for compliance with Benford's Law."
authors = ["Your Name <ajprice@mail.wlu.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ajprice16/benford-midi-analysis"
repository = "https://github.com/ajprice16/benford-midi-analysis"
keywords = ["benford", "midi", "analysis", "statistics"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.21"
pandas = "^1.3"
matplotlib = "^3.4"
scipy = "^1.7"
mido = "^1.2"
tqdm = "^4.62"

[tool.poetry.dev.dependencies]
pytest = "^6.2"
pytest-cov = "^2.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"